# PyDASA

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CS-01 - E-Health - TAS.ipynb  CS-02 - Smart City - SASR.ipynb  CS-03 - Fluids - VProfile.ipynb  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.claude/: settings.json
.claude/commands/: changelog.md  ci-status.md  code-report.md  coverage.md  deps.md  devlog.md  poc.md  pr.md  release-check.md  review.md  stage.md  test.md
.github/workflows/: release.yml  test.yml
Concepts/: DSAA-v1.ipynb
Concepts/Parser/: parserC.py  parserD.py  parserE.py
Concepts/Sensitivity/: AnsysC.py
Concepts/multimodule/: main.py  module_a.py  module_b.py
Notebook/: commands.txt
docs/: .readthedocs.yaml  analysis.rst  buckingham.rst  conf.py  core.rst  datastruct.lists.rst  datastruct.rst  datastruct.tables.rst  dimensional.rst  handlers.rst  index.rst  modules.rst  src.PyDASA.Analysis.rst  src.PyDASA.Dims.rst  src.PyDASA.Models.rst  src.PyDASA.Structs.Elems.rst  src.PyDASA.Structs.Lists.rst  src.PyDASA.Structs.rst  src.PyDASA.Utils.Cfg.rst  src.PyDASA.Utils.rst  src.PyDASA.rst  src.rst
examples/: CS-01 - E-Health - TAS.ipynb
lab/: README.md
notebooks/: contribute_ideas.md  decorator_refactor.md  make_docu.sh  migration_guide.md  notes.txt  performance_analysis.md
notes/: commands.md  commands.txt  development.txt  devlog.md  documentation.txt  gource.txt  quickstart.md
pydasavenv/: pyvenv.cfg
tests/: test_package.py
tools/: generate_diagrams.py
(+341 files in other folders)
