[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pydasa"
dynamic = ["version"]
description = "Python package for Dimensional Analysis for Scientific Applications and Software Architecture (PyDASA)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    {name = "@SFAM", email = "your_email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "antlr4-python3-runtime==4.11",
    "numpy>=1.26.4",
    "scipy>=1.13.0",
    "sympy>=1.12",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
    "SALib>=1.4.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "twine>=6.1.0",
]
docs = [
    "sphinx>=7.3.7",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/DASA-Design/PyDASA"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "pydasa._version.__version__"}